--- a/Courier Management System/Courier Management System/codes/CMS.ipynb
+++ b/Courier Management System/Courier Management System/codes/CMS.ipynb
@@ -41,7 +41,7 @@
     "import mysql.connector\n",
     "from tkinter import messagebox\n",
     "from PIL import ImageTk,Image\n",
-    "mydb=mysql.connector.connect(host='localhost',user='root',password='Shivam@2025',database='courier')\n",
+    "mydb=mysql.connector.connect(host='localhost',user='root',password='Niraj@2025',database='courier')\n",
     "cur=mydb.cursor()\n",
     "root=Tk()\n",
     "root.title(\"Welcome to Courier Management System\")\n",
